[package]
name = "Chatty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.3"
jsonwebtoken = "9.3.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
argon2 = "0.5.3"  # For hashing passwords
bcrypt = "0.16.0"  # Optional, for hashing passwords
